# maestro

./: .gitignore  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  build-docker.sh  composers.sql  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  traefik.dev.toml  traefik.prod.toml
backend/app/: config.py  main.py
backend/app/api/: main.py
backend/app/api/routes/: admin.py  auth.py  composer.py  opus.py  playlist.py  recording.py  search.py
backend/app/core/: database.py  initial_data.py  log.txt  models.py  search_data.py
backend/app/utils/: security.py  thread_with_return_value.py
frontend/: axios.config.ts  next.config.js  package.json  tsconfig.json
frontend/components/: CreatePlaylistModal.tsx  Layout.tsx  LoginButton.tsx  MusicPlayer.tsx  Pagination.tsx  PieceCard.tsx  PlayerFooter.tsx  PlaylistCard.tsx  RecentListen.tsx  Separator.tsx  UpdatePlaylistModal.tsx  UploadFile.tsx
frontend/components/PieceCard/: DefaultPieceCard.tsx  PlaylistPieceCardVariant.tsx  SmallPieceCardVariant.tsx
frontend/components/admin/: ComposerPiece.tsx  ComposersList.tsx  CreateNewComposerModal.tsx  CreateNewOpusModal.tsx  OpusList.tsx  OpusPiece.tsx  UpdateComposerModal.tsx  UpdateOpusModal.tsx  UploadAudio.tsx
frontend/components/auth/: NotLoggedIn.jsx
frontend/components/composers/: OpusCard.tsx
frontend/components/profile/: Header.tsx  Motion.tsx
frontend/pages/: _app.tsx  home.tsx  index.tsx  search.tsx
frontend/styles/: globals.css
frontend/utils/: useAudioPlayer.ts  useLocalStorage.ts  useWindowSize.ts
(+17 files in other folders)
