[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jacopo Beragnoli <31521001+Berags@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.109.1"
psycopg2 = "^2.9.9"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"
redis = "^5.0.3"
